# DataTransfer

./: CMakeLists.txt  README.md  request.cpp  request.h
include/: CStr.cpp  CStr.h
include/ws2/: TCPSocket.hpp
program1/: CMakeLists.txt  client.cpp  client.h
program1/include/socket/: ClientSocket.cpp  ClientSocket.h
program1/include/string/: string_service.cpp  string_service.h
program2/: CMakeLists.txt  server.cpp  server.h
program2/include/socket/: ServerSocket.cpp  ServerSocket.h
test/: CMakeLists.txt
